# aws-terraform-container-deploy

./: .flake8  .gitignore  .gitignore.gitignorere  app.py  deploy_containers.sh  pyproject.toml  pytest.ini  readme.md
.github/workflows/: deploy.yml  enhanced-ml-pipeline.yml
scripts/: deploy.sh  generate_deployment_report.py  package_lambdas.sh  setup_cloudwatch_dashboards.py  setup_cost_alerts.py  setup_custom_metrics.py
src/lambda_functions/generate_text/: Dockerfile  attention.py  embedding.py  encoder.py  main.py  requirements.txt  tokenizer.py  transformer.py
src/lambda_functions/visualize_attention/: Dockerfile  attention.py  embedding.py  main.py  requirements.txt  transformer.py
src/lanbda_functions/generate_text/: main.py
src/model/: tokenizer.json
src/streamlit/: app.py  monitoring_dashboard.py  requirements.txt
terraform/: api_gateway.tf  lambda.tf  main.tf  outputs.tf  variables.tf
terraform/.terraform/: terraform.tfstate
terraform/.terraform/modules/: modules.json
terraform/api_gateway/: main.tf
terraform/cloudwatch/: main.tf
terraform/cors/: main.tf
terraform/ecr/: main.tf
terraform/lambda/: main.ft  main.tf
terraform/s3/: main.tf
tests/: conftest.py  readme.md
tests/integration/: test_e2e_workflow.py  test_generate_text_api.py  test_lambda_handlers.py  test_visualize_attention_api.py
tests/performance/: test_cold_start_analysis.py  test_lambda_performance.py
tests/regression/: test_api_response_times.py  test_cost_drift_analysis.py  test_daily_health_checks.py  test_model_performance_regression.py
tests/smoke/: test_deployment_health.py
tests/unit/: test_lambda_handlers.py  test_s3_integration.py  test_tokenizer.py  test_transformer.py
